# Eloquence64RS

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  SConstruct  buildVars.py  build_host.cmd  build_native_host.cmd  host_eloquence32.py  pyproject.toml  runlint.bat  runpytest.bat  say_all_em_dash_repro.html  scons.bat  test_paragraph.md  update.json
.github/workflows/: build.yml
addon/: installTasks.py
addon/synthDrivers/: _eloquence.py  _eloquence_native.py  _eloquence_text.py  _eloquence_updater.py  _script_conversion.py  _secure_screen.py  _text_preprocessing.py  eloquence.py
addon/synthDrivers/t2s_data/: PROVENANCE.md
docs/adr/: 0001-script-conversion-for-traditional-chinese.md  0002-native-rust-eloquence-host.md  0003-rust-host-only.md
docs/agents/: domain.md
docs/release-notes/: v19.0-RS-RC1.md  v19.0-RS-RC2.md  v19.0-RS-RC3.md  v19.0-RS.md  v19.1-RS-beta1.1.md  v19.1-RS-beta1.md
native_host/: Cargo.toml
native_host/src/: assets.rs  audio.rs  dictionaries.rs  eci.rs  engine.rs  lib.rs  main.rs  progress.rs  protocol.rs  server.rs  wire.rs
native_host/tests/: host_process.rs
tests/: test_addon_install_update.py  test_addon_packaging.py  test_audio_worker.py  test_eloquence_text.py  test_host_dictionaries.py  test_language_scope.py  test_native_client_process.py  test_native_protocol.py  test_script_conversion_data.py  test_secure_screen_install.py  test_temp_prosody.py  test_text_preprocessing.py
